[package]
name = "sentinel"
version = "0.2.3"
edition = "2021"
authors = ["Nils Mathieu <nils.mathieu.contact@gmail.com>"]
description = "A sentinel-terminated slice library."
license = "MIT OR Apache-2.0"
keywords = ["slice", "cstr", "null"]
categories = ["data-structures", "no-std", "development-tools::ffi"]
repository = "https://github.com/nils-mathieu/sentinel"
readme = "readme.md"
documentation = "https://docs.rs/sentinel"

[features]
default = ["alloc", "null"]

alloc = []
null = ["memchr"]
nightly = []

[dependencies]
memchr = { version = "2", default-features = false, optional = true }
