[package]
name = "sentinel"
version = "0.4.0"
edition = "2021"
authors = ["Nils Mathieu <nils.mathieu.contact@gmail.com>"]
description = "A sentinel-terminated slice library."
license = "MIT OR Apache-2.0"
keywords = ["slice", "cstr", "null"]
categories = ["data-structures", "no-std", "development-tools::ffi"]
repository = "https://github.com/nils-mathieu/sentinel"
readme = "readme.md"
documentation = "https://docs.rs/sentinel"

[features]
default = ["alloc", "memchr"]

# Adds support for the `alloc` crate.
alloc = []

# Adds support for nightly features such as `extern_types` and `allocator_api`.
nightly = []

[dependencies]
# Use the `memchr` crate to look for a null byte in C-like strings.
memchr = { version = "2", default-features = false, optional = true }

# Use `libc`'s `strlen` to look for null characters.
libc = { version = "0.2", default-features = false, optional = true }

[package.metadata.cargo-all-features]
denylist = [ "nightly" ]
